# service-sdk

./: .gitignore  APP_BOOTSTRAP.md  Cargo.toml  README.md
service-sdk/: Cargo.toml
service-sdk-macros/: Cargo.toml
service-sdk-macros/src/: lib.rs
service-sdk-macros/src/generate_grpc_service/: max_hardcoded.rs  mod.rs  with_params.rs
service-sdk/src/: lib.rs  service_context.rs
service-sdk/src/builders/: grpc_server_builder.rs  http_server_builder.rs  mod.rs  unix_socket_enabled.rs
service-sdk/src/common/: into_grpc_server.rs  mod.rs  service_info.rs
service-sdk/src/sdk_metrics/: events_per_second.rs  grpc_metrics_middleware.rs  http_metrics_middleware.rs  http_metrics_tech_middleware.rs  mod.rs
service-sdk/src/service_context/: service_context.rs
