[package]
name = "service-sdk"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

my-nosql-sdk = ["dep:my-no-sql-sdk"]

my-nosql-data-reader-sdk = [
    "dep:my-no-sql-sdk",
    "my-no-sql-sdk/data-reader",
    "service-sdk-macros/no-sql-reader",
]

my-nosql-data-writer-sdk = [
    "dep:my-no-sql-sdk",
    "my-no-sql-sdk/data-writer",
    "service-sdk-macros/no-sql-writer",
]

macros = [
    "my-no-sql-sdk?/macros",
    "my-service-bus?/macros",
    "my-grpc-extensions?/grpc-server",
    "my-grpc-extensions?/grpc-client",
]

with-ssh = [
    "my-grpc-extensions?/with-ssh",
    "my-grpc-extensions?/with-unix-socket",
]

full = [
    "my-service-bus",
    "my-nosql-sdk",
    "my-nosql-data-reader-sdk",
    "my-nosql-data-writer-sdk",
    "grpc",
    "postgres",
    "macros",
]
my-service-bus = ["dep:my-service-bus", "service-sdk-macros/my-service-bus"]

websockets = ["my-http-server/websocket"]


grpc = ["dep:futures-core", "dep:my-grpc-extensions", "service-sdk-macros/grpc"]

with-tls = ["my-grpc-extensions?/with-tls", "rustls"]

postgres = [
    "dep:my-postgres",
    "dep:tokio-postgres",
    "service-sdk-macros/postgres",
]

signal-r = ["my-http-server/signal-r"]


[dependencies]
serde = { version = "*" }
tokio = { version = "*", features = ["full"] }
async-trait = "*"
service-sdk-macros = { path = "../service-sdk-macros" }

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
    "base64",
] }

is-alive-middleware = { tag = "0.8.3", git = "https://github.com/MyJetTools/is-alive-middleware.git" }
my-telemetry = { tag = "1.2.2", git = "https://github.com/MyJetTools/my-telemetry.git", features = [
    "my-telemetry-writer",
] }

my-no-sql-sdk = { optional = true, git = "https://github.com/MyJetTools/my-no-sql-sdk.git", tag = "0.4.1" }
my-service-bus = { optional = true, git = "https://github.com/MyJetTools/my-service-bus-sdk.git", tag = "1.1.3", features = [
    "client",
    "with-telemetry",
] }

my-logger = { tag = "1.2.1", git = "https://github.com/MyJetTools/my-logger.git", features = [
    "my-seq-logger",
] }
my-http-server = { tag = "0.8.3", git = "https://github.com/MyJetTools/my-http-server", features = [
    "controllers",
    "macros",
    "with-telemetry",
] }

my-postgres = { tag = "0.5.6", git = "https://github.com/MyJetTools/my-postgres.git", features = [
    "with-telemetry",
    "with-tls",
    "macros",
], optional = true }

tokio-postgres = { version = "*", optional = true }

my-grpc-extensions = { optional = true, tag = "0.6.5", git = "https://github.com/MyJetTools/my-grpc-extensions", features = [
    "with-telemetry",
] }


my-settings-reader = { tag = "0.4.1", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }

flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url.git" }
serde_yaml = { version = "*" }

rustls = { version = "*", optional = true }

futures-core = { version = "*", optional = true }

metrics = "*"
stopwatch = "*"
prometheus = "*"
tower = "*"
metrics-prometheus = "*"
